--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="mattleuterio.com / I'm a frontend developer based in Italy. I love seeing my creations take shape and I am open to discussions and suggestions in order to improve every detail."
     />
+    <meta 
+      name="keywords" 
+      content="frontend developer, web developer, sviluppatore web, frontend, react, javascript, html, css, scss">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
