--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,17 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="mattleuterio.com / I'm a frontend developer based in Italy. I love seeing my creations take shape and I am open to discussions and suggestions in order to improve every detail."
+      content="mattleuterio.dev / I'm a frontend developer based in Italy. I love seeing my creations take shape and I am open to discussions and suggestions in order to improve every detail."
     />
     <meta 
       name="keywords" 
       content="frontend developer, web developer, sviluppatore web, frontend, react, javascript, html, css, scss">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <meta property="og:title" content="Matt Leuterio - Frontend Developer">
+    <meta property="og:description" content="mattleuterio.dev / I'm a frontend developer based in Italy. I love seeing my creations take shape and I am open to discussions and suggestions in order to improve every detail.">
+    <meta property="og:image" content="%PUBLIC_URL%/img/thumbnail.png">
+    <meta property="og:url" content="%PUBLIC_URL%">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
